# surge-sdk

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  release.toml
.github/workflows/: ci.yml
src/: client.rs  config.rs  error.rs  lib.rs  main.rs  sdk.rs  stream.rs  types.rs  ui.rs  utils.rs
src/responses/: account.rs  certs.rs  danalytics.rs  daudit.rs  discard.rs  list.rs  login.rs  manifest.rs  metadata.rs  mod.rs  plans.rs  roll.rs  settings.rs  shared.rs  stripe.rs  teardown.rs  uploadfin.rs  usage.rs
tests/: client.rs  common.rs
